<resources>
    <string name="app_name">Home Bookkeeping</string>
    <string name="add">Add</string>
    <string name="monthly_expenses">"Monthly Expenses"</string>
    <string name="monthly_income">"Monthly Income"</string>
    <string name="balance">Balance</string>
    <string name="monthly_chart_view">Monthly Budget Graph</string>
    <string name="add_note">Add Notes:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_hint">note</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="time_picker">CreatedAt (24 H Format)</string>
    <string name="set_budget">"Your Budget "</string>
    <string name="date_empty">Sorry...Can\'t find the record</string>
    <string name="please_search_info">Please enter the record information</string>
</resources>